ewfqwe3gtfq3twtg
te5hjrt456h5y54hy

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@ Links:
 <center><h2>pyLauncher versions chalangelog:</h2></center>
 <br>
 <p>
+11.6: pyLauncher now works without Java!!!!!!!!!
+<br>
+I used for this openjdk 9 portable!!!
+<br>
 10.5:small update that changed main server; pylauncher have website! http://glowiak.github.io/pylauncher
 <br>
 9.4:small update for forge & modloader instances...
@@ -62,6 +66,8 @@ ModernWarfare
 <center><h2>pyLauncher Downloads:</h2></center>
 <br>
 <p>
+<a href=https://github.com/glowiak/pylauncher/releases/download/11.6-Jii/pyLauncher11.6.zip>pyLauncher 11.6</a>
+<br>
 <a href=https://github.com/glowiak/pylauncher/releases/download/10.5-Jii/pyLauncher10.5.zip>pyLauncher 10.5</a>
 <br>
 <a href=https://github.com/glowiak/pylauncher/releases/download/9.4/pyLauncher9.4.zip>pyLauncher 9.4</a>
@@ -79,6 +85,33 @@ ModernWarfare
 <a href=https://github.com/glowiak/pylauncher/releases/download/3.0/pyLauncher.3.zip>pyLauncher 3.0</a>
 <br>
 <a href=https://github.com/glowiak/pylauncher/releases/download/2.76/pyLauncher.2.76.zip>pyLauncher 2.76</a>
+</p>
+<br>
+<center><h2>pyLauncher 10.5 and older requires Java 6</h2></center>
+<p>
+Java Installation Tutorial:
+<br>
+Step 1: Download and install Java 6: <a href=http://glowiak.github.io/file/java6.exe>[CLICK HERE]</a>
+<br>
+Step 2: Add Java to path: Open Control Panel;Open System and Security;
+<br>
+Open System;Click on Advanced System Settings;Click on Environment Variables;
+<br>
+Add to System Variables:
+<br>
+New variables:
+<br>
+Variable name:JAVA_HOME
+<br>
+Variable Value:"C:\Program Files (x86)\Java\jre6"
+<br>
+Variable to be edited:
+<br>
+Variable name:Path
+<br>
+Add this text to variable: ;%JAVA_HOME%\bin
+<br>
+Java 6 installed and added to Path; you can use pyLauncher 10.5 and older!
 </p>
 </body>
 </html>
