pylauncher is now discontinued

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@ Links:
 <center><h2>pyLauncher versions chalangelog:</h2></center>
 <br>
 <p>
+pylauncher is now discontinued. linux version MAY be released.
+<br>
 11.6: pyLauncher now works without Java!!!!!!!!!
 <br>
 I used for this openjdk 9 portable!!!
